# esp32

./: .gitignore  README.md
FreeRTOS/: README.md
FreeRTOS/binary-semaphore/: CMakeLists.txt
FreeRTOS/binary-semaphore/main/: main.c
FreeRTOS/event-groups/main/: main.c
FreeRTOS/mutex-and-counting/: CMakeLists.txt
FreeRTOS/mutex-and-counting/main/: main.c
FreeRTOS/queue/: CMakeLists.txt
FreeRTOS/queue/main/: main.c
FreeRTOS/software-timer/: CMakeLists.txt
FreeRTOS/software-timer/main/: main.c
FreeRTOS/task-notifications/: CMakeLists.txt
FreeRTOS/task-notifications/main/: main.c
FreeRTOS/tasks/: CMakeLists.txt
FreeRTOS/tasks/main/: main.c
blinky/main/: main.c
gpio/: README.md
gpio/adc/: CMakeLists.txt
gpio/adc/main/: main.c
gpio/blinky/main/: main.c
gpio/interrupts/main/: main.c
gpio/ledc/: CMakeLists.txt
gpio/ledc/main/: main.c
gpio/touch/: CMakeLists.txt
gpio/touch/main/: main.c
highres-timer/main/: main.c
imu/: CMakeLists.txt
imu/components/Active/: Active.cpp  CMakeLists.txt
imu/components/Active/include/: Active.hpp
imu/components/MinIMU9/: CMakeLists.txt  MinIMU9.cpp
imu/components/MinIMU9/include/: MinIMU9.h
imu/components/RCFilter/: CMakeLists.txt  RCFilter.cpp
imu/components/RCFilter/include/: RCFilter.h
imu/main/: CMakeLists.txt  main.cpp
internet-connection/AP-STA/: CMakeLists.txt
internet-connection/AP-STA/components/connect/: CMakeLists.txt  Kconfig.projbuild  connect.c
internet-connection/AP-STA/components/server/: CMakeLists.txt  server.c
internet-connection/AP-STA/components/server/include/: server.h
internet-connection/AP-STA/components/tmp102/: CMakeLists.txt  tmp102.c
internet-connection/AP-STA/components/tmp102/include/: tmp102.h
internet-connection/AP-STA/html/: config-wifi.html  scripts.js  wifi-set.html
internet-connection/AP-STA/main/: CMakeLists.txt  main.c
internet-connection/HTTP-client/main/: main.c
internet-connection/NTP/: CMakeLists.txt
internet-connection/NTP/main/: main.c
internet-connection/REST-API/: CMakeLists.txt
internet-connection/REST-API/components/connect/: connect.c
internet-connection/REST-API/components/rest/: CMakeLists.txt  rest.c
internet-connection/REST-API/components/rest/include/: rest.h
internet-connection/REST-API/main/: main.c
internet-connection/REST-Client/: CMakeLists.txt
internet-connection/REST-Client/components/connect/: CMakeLists.txt  (+1 more)
internet-connection/REST-Client/components/rest/: CMakeLists.txt  Kconfig.projbuild  rest.c
internet-connection/REST-Client/components/rest/include/: rest.h
internet-connection/REST-Client/main/: CMakeLists.txt  main.c
internet-connection/WIFI-connect/main/: main.c
internet-connection/WIFI-scanner/: CMakeLists.txt
internet-connection/WIFI-scanner/main/: main.c
internet-connection/web-server/main/: CMakeLists.txt  main.c
nvs/: CMakeLists.txt
nvs-blob/: CMakeLists.txt  partitions2.csv
nvs-blob/main/: main.c
nvs/main/: main.c
protocols/: README.md
protocols/I2C/main/: main.c
protocols/SPI-SD/main/: sd_card_example_main.c
protocols/UART/: CMakeLists.txt
protocols/UART/main/: main.c
sleep/deep-sleep/main/: main.c
sleep/light-sleep/: CMakeLists.txt
sleep/light-sleep/main/: main.c
spiffs/: CMakeLists.txt  custom-partitions.csv
spiffs/main/: CMakeLists.txt  main.c
sram/: CMakeLists.txt
sram/main/: main.c
timer-highres/: CMakeLists.txt
(+9 files in other folders)
